--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id "java"
     id 'org.jetbrains.kotlin.jvm' version '1.4.30'
+
+    id 'maven-publish'
 }
 
 group 'markdown.echo'
@@ -22,4 +24,24 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/markdown-party/kotlin-echo")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            groupId = "markdown.party"
+            artifactId = "echo"
+            from components.java
+        }
+    }
 }
