--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,9 @@
 rootProject.name = 'kotlin-echo'
 
+// echo replication libraries
 include ':echo'
+include ':echo-ktor'
+include ':echo-transport'
+
+// markdown-party
+include 'markdown-backend'
