--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ rootProject.name = 'kotlin-echo'
 // echo replication libraries
 include ':echo'
 include ':echo-ktor'
+include ':echo-ktor-server'
 include ':echo-transport'
 
 // markdown-party
