--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,11 @@
+// TODO : Remove this once Compose for Desktop is not in preview.
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        maven { url = "https://maven.pkg.jetbrains.space/public/p/compose/dev" }
+    }
+}
+
 rootProject.name = 'kotlin-echo'
 
 // echo replication libraries
@@ -8,3 +16,6 @@ include ':echo-transport'
 
 // markdown-party
 include 'markdown-backend'
+
+// samples
+include ':sample-drawing'
