--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,7 @@ rootProject.name = 'kotlin-echo'
 
 // echo replication libraries
 include ':echo'
-include ':echo-ktor'
+include ':echo-ktor-client'
 include ':echo-ktor-server'
 include ':echo-transport'
 
