Add a JS browser app module

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,7 +18,8 @@ include ':echo-ktor-server'
 include ':echo-transport'
 
 // markdown-party
-include 'markdown-backend'
+include ':markdown-backend'
+include ':markdown-frontend'
 
 // samples
 include ':sample-drawing'
