Add a common markdown module for backend and frontend

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,7 @@ include ':echo-ktor-server'
 include ':echo-transport'
 
 // markdown-party
+include ':markdown'
 include ':markdown-backend'
 include ':markdown-frontend'
 
