Add an echo-core module for high performance data structures

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ rootProject.name = 'kotlin-echo'
 enableFeaturePreview("GRADLE_METADATA")
 
 // echo replication libraries
+include ':echo-core'
 include ':echo'
 include ':echo-ktor-client'
 include ':echo-ktor-server'
