[DO NOT MERGE] Disable `sample-drawing` module temporarily

--- a/settings.gradle
+++ b/settings.gradle
@@ -24,4 +24,5 @@ include ':markdown-backend'
 include ':markdown-frontend'
 
 // samples
-include ':sample-drawing'
+// FIXME : Re-introduce this sample when Compose for Desktop supports Kotlin 1.5.20
+// include ':sample-drawing'
