Display SVG with Nginx

--- a/infra/docker/frontend/nginx.conf
+++ b/infra/docker/frontend/nginx.conf
@@ -12,5 +12,6 @@ http {
   access_log /dev/stdout;
   server_tokens off; # Hide nginx version in Server header & page footers
 
+  include mime.types;
   include /etc/nginx/conf.d/*.conf;
 }
