--- a/infra/docker/frontend/default.conf.template
+++ b/infra/docker/frontend/default.conf.template
@@ -5,10 +5,6 @@ server {
   root   /usr/share/nginx/html;
 
   location / {
-    try_files $uri $uri/ /index.html;
-  }
-
-  location ~ \.(?!html) {
-    try_files $uri =404;
+    try_files $uri /index.html;
   }
 }
