--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,9 @@
 pluginManagement {
     repositories {
         gradlePluginPortal()
+        mavenCentral()
         maven { url = "https://maven.pkg.jetbrains.space/public/p/compose/dev" }
+        google()
     }
 }
 
