Migrate `implementation` and `api` calls to Gradle version catalogs

--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,7 @@ include ':markdown-frontend-compose'
 // samples
 include ':sample-drawing'
 include ':sample-walkthrough'
+
+// Enable Gradle's version catalog support
+// https://docs.gradle.org/current/userguide/platforms.html
+enableFeaturePreview("VERSION_CATALOGS")
