--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
 
-kotlin = "1.6.10"
+kotlin = "1.6.21"
 binarycompatibility = "0.8.0"
-compose = "1.0.1-rc2"
+compose = "1.2.0-alpha01-dev686"
 coroutines = "1.6.0"
 datetime = "0.3.1"
 immutablecollections = "0.3.4"
-ktor = "1.6.7"
-serialization = "1.3.1"
+ktor = "2.0.2"
+serialization = "1.3.2"
 slf4j = "1.7.21"
 
 [libraries]
@@ -20,7 +20,8 @@ datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "d
 
 immutablecollections = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "immutablecollections" }
 
-ktor-http-cio = { module = "io.ktor:ktor-http-cio", version.ref = "ktor" }
+ktor-websockets = { module = "io.ktor:ktor-websockets", version.ref = "ktor" }
+
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-js = { module = "io.ktor:ktor-client-js", version.ref = "ktor" }
@@ -29,7 +30,7 @@ ktor-client-websockets = { module = "io.ktor:ktor-client-websockets", version.re
 ktor-server-cio = { module = "io.ktor:ktor-server-cio", version.ref = "ktor" }
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
 ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor" }
-ktor-server-websockets = { module = "io.ktor:ktor-websockets", version.ref = "ktor" }
+ktor-server-websockets = { module = "io.ktor:ktor-server-websockets", version.ref = "ktor" }
 ktor-server-test = { module = "io.ktor:ktor-server-test-host", version.ref = "ktor" }
 
 serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "serialization" }
@@ -38,7 +39,7 @@ serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-jso
 
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 
-turbine = "app.cash.turbine:turbine:0.7.0"
+turbine = "app.cash.turbine:turbine:0.8.0"
 
 [bundles]
 
