--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -16,12 +16,12 @@ jobs:
           java-version: 1.11
       - name: 🐳 Build the Docker image
         run: |
-          ./build-image.sh
+          ./deployment/heroku/build-image.sh
       - name: 🚀 Publish the image to Heroku
         env:
           HEROKU_TOKEN: ${{ secrets.HEROKU_TOKEN }}
         run: |
-          ./publish-image-heroku.sh
+          ./deployment/heroku/publish-image-heroku.sh
       - name: 🏁 Release the image on Heroku
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_TOKEN }}
