--- a/deployment/firebase/firebase.json
+++ b/deployment/firebase/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "markdown/markdown-frontend-compose/build/distributions",
+    "public": "./markdown/markdown-frontend-compose/build/distributions",
     "ignore": [
       "firebase.json",
       "**/.*",
