--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,7 @@ include ':library:echo-ktor-websockets'
 
 // markdown-party
 include ':markdown:markdown'
+include ':markdown:markdown-signaling'
 include ':markdown:markdown-backend'
 include ':markdown:markdown-frontend-compose'
 
