--- a/.github/workflows/dokka.yml
+++ b/.github/workflows/dokka.yml
@@ -24,5 +24,6 @@ jobs:
           git config user.email "${{github.actor}}@users.noreply.github.com"
           git add .
           git commit -m "Deployed the documentation 🚀"
+          git checkout -b dokka
           git remote add origin https://${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git
           git push -u origin dokka --force
