Revert "Use self-hosted runner for tests"
This reverts commit 9ef9bcbeee02fab7da420d098b587b656e66350e.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: 🎁 Checkout repo
         uses: actions/checkout@v2
